--- a/core/res/res/values/cr_config.xml
+++ b/core/res/res/values/cr_config.xml
@@ -124,4 +124,7 @@
     </string-array>
     <string-array name="device_configs_override" translatable="false">
     </string-array>
+
+    <!-- Smart Pixels UDFPS -->
+    <bool name="disable_smart_pixels_on_udfps">false</bool>
 </resources>
