--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -94,4 +94,7 @@
     <!-- Define device configs on boot -->
     <java-symbol type="array" name="global_device_configs_override" />
     <java-symbol type="array" name="device_configs_override" />
+
+    <!-- Smart Pixels UDFPS -->
+    <java-symbol type="bool" name="disable_smart_pixels_on_udfps"/>
 </resources>
