--- a/core/res/res/values/alpha_symbols.xml
+++ b/core/res/res/values/alpha_symbols.xml
@@ -71,4 +71,9 @@
 
     <java-symbol type="id" name="qs_state_layer" />
 
+    <!-- Status bar paddings -->
+    <java-symbol type="dimen" name="status_bar_padding_start" />
+    <java-symbol type="dimen" name="status_bar_padding_end" />
+    <java-symbol type="dimen" name="status_bar_padding_top" />
+
 </resources>
