--- a/core/res/res/values/alpha_symbols.xml
+++ b/core/res/res/values/alpha_symbols.xml
@@ -69,4 +69,6 @@
     <java-symbol type="string" name="config_batterymeterLandPowersavePathMiUIPill" />
     <java-symbol type="string" name="config_batterymeterLandErrorPerimeterPathMiUIPill" />
 
+    <java-symbol type="id" name="qs_state_layer" />
+
 </resources>
