--- a/core/res/res/values/sigma_config.xml
+++ b/core/res/res/values/sigma_config.xml
@@ -8,4 +8,7 @@
     <!-- Default FOD pressed color -->
     <integer name="config_udfps_pressed_color">3</integer>
 
+    <!-- Whether to trigger OnFingerDown with regular action down events -->
+    <bool name="config_udfpsNeedsFingerDownOnActionDown">true</bool>
+
 </resources>
