--- a/core/res/res/values/evolution_symbols.xml
+++ b/core/res/res/values/evolution_symbols.xml
@@ -8,7 +8,7 @@
     <java-symbol type="string" name="config_netflixSpoofModel" />
 
     <!-- AttestationHooks -->
-    <java-symbol type="array" name="config_certifiedBuildProperties" />
+    <!-- <java-symbol type="array" name="config_certifiedBuildProperties" /> -->
     <java-symbol type="string" name="config_stockFingerprint" />
 
     <!-- Whether Pixel props is enabled -->
@@ -18,5 +18,5 @@
     <java-symbol type="bool" name="config_spoofasTablet" />
 
     <!-- Whether device has Google Tensor SoC -->
-    <java-symbol type="bool" name="config_hasTensorSoC" />
+    <!-- <java-symbol type="bool" name="config_hasTensorSoC" /> -->
 </resources>
