--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -922,6 +922,7 @@
     <dimen name="notification_panel_min_side_margin">48dp</dimen>
 
     <dimen name="volume_row_slider_height">192dp</dimen>
+    <dimen name="volume_row_slider_progress_height">158dp</dimen>
 
     <!-- Thickness of the assist disclosure beams -->
     <dimen name="assist_disclosure_thickness">2.5dp</dimen>
